--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ version: '3.8'
 services:
   post-service:
     image: post-service:latest
+    pull_policy: build
     container_name: post-service
     restart: unless-stopped
     build:
@@ -28,6 +29,7 @@ services:
 
   user-service:
     image: user-service:latest
+    pull_policy: build
     container_name: user-service
     restart: unless-stopped
     build:
@@ -40,7 +42,7 @@ services:
       - internal
     environment:
       POSTGRES_HOST: user-service-db
-      POSTGRES_PORT: 5433
+      POSTGRES_PORT: 5432
       POSTGRES_DB: user_db
       POSTGRES_USER: admin
       POSTGRES_PASSWORD: admin
@@ -50,6 +52,7 @@ services:
   image-processing-service:
     image: image-processing-service:latest
     container_name: image-processing-service
+    pull_policy: build
     build:
       context: ../image-processing-service
     ports:
