--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,23 @@
 version: '3.8'
 
 services:
+  nginx:
+    image: nginx:alpine
+    container_name: nginx-gateway
+    restart: unless-stopped
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./ssl:/etc/nginx/ssl:ro
+    depends_on:
+      - post-service
+      - user-service
+      - image-processing-service
+    networks:
+      - internal
+
   post-service:
     image: post-service:latest
     pull_policy: build
@@ -8,8 +25,6 @@ services:
     restart: unless-stopped
     build:
       context: ../post-service
-    ports:
-      - '8081:8080'
     depends_on:
       - post-service-db
     networks:
@@ -34,8 +49,6 @@ services:
     restart: unless-stopped
     build:
       context: ../user-service
-    ports:
-      - '8080:8080'
     depends_on:
       - user-service-db
     networks:
@@ -55,8 +68,6 @@ services:
     pull_policy: build
     build:
       context: ../image-processing-service
-    ports:
-      - "8083:8080"
     depends_on:
       rabbitmq:
         condition: service_healthy
@@ -119,7 +130,7 @@ services:
     volumes:
       - user_service_data:/var/lib/postgresql/data
     networks:
-        - internal
+      - internal
     restart: unless-stopped
 
 volumes:
