--- a/nginx.conf
+++ b/nginx.conf
@@ -53,6 +53,14 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
         }
         
+        location /email {
+                    proxy_pass http://user-service;
+                    proxy_set_header Host $host;
+                    proxy_set_header X-Real-IP $remote_addr;
+                    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+                    proxy_set_header X-Forwarded-Proto $scheme;
+                }
+        
         location /posts {
             proxy_pass http://post-service;
             proxy_set_header Host $host;
